Fixed sidebar overlaping with footer in Firefox

--- a/Front-End/src/css/faq_style.css
+++ b/Front-End/src/css/faq_style.css
@@ -141,8 +141,8 @@ header h1 {
     display: block;
     overflow: hidden;
     text-decoration: none;
-    height: 50px;
-    line-height: 50px;
+    height: 40px;
+    line-height: 40px;
     padding: 0 28px 0 16px;
     background-color: #E6E6E6;
     /*#4e5359*/
